--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
 <header class="site-header">
   <div class="header-inner">
     <!-- Replace with your image path -->
-    <img src="logo.jpg" alt="Silk in France Logo" class="logo">
+    <img src="https://github.com/katannjam-arch/silkinlyon/blob/bdd8e85897e4d7d2bfaf22befa292ff601011d1c/logo.jpg" alt="Silk in France Logo" class="logo">
   </div>
 </header>
 
