--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
 <header class="site-header">
   <div class="header-inner">
     <!-- Replace with your image path -->
-    <img src="https://github.com/katannjam-arch/silkinlyon/logo.jpg" alt="Silk in France Logo" class="logo">
+    <img src="https://raw.githubusercontent.com/katannjam-arch/silkinlyon/refs/heads/main/logo.jpg" alt="Silk in France Logo" class="logo">
   </div>
 </header>
 
