--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
 <header class="site-header">
   <div class="header-inner">
     <!-- Replace with your image path -->
-    <img src="https://github.com/katannjam-arch/silkinlyon/blob/ba9faf3702f3691235db17d7fa562f971d648c51/logo.jpg" alt="Silk in France Logo" class="logo">
+    <img src="/logo.jpg" alt="Silk in France Logo" class="logo">
   </div>
 </header>
 
